crates/vize_croquis/src/sfc/parse/snapshots/vize_croquis__sfc__parse__tests__script_with_regex_containing_quotes.snap
---
source: crates/vize_croquis/src/sfc/parse/tests.rs
expression: script
---
SfcScriptBlock {
    content: "\nconst tokenizer = {\n  root: [\n    [/<script[^>]*>/, \"tag\"],\n    [/\"[^\"]*\"/, \"string\"],\n    [/'[^']*'/, \"string\"],\n    [/`[^`]*`/, \"string\"],\n  ]\n}\nconst e = 5\n",
    loc: BlockLocation {
        start: 14,
        end: 174,
        tag_start: 0,
        tag_end: 183,
        start_line: 1,
        start_column: 15,
        end_line: 11,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
