crates/vize_croquis/src/sfc/parse/snapshots/vize_croquis__sfc__parse__tests__tags_in_code_comments.snap
---
source: crates/vize_croquis/src/sfc/parse/tests.rs
expression: result.script_setup.unwrap()
---
SfcScriptBlock {
    content: "\nconst x = 1\n",
    loc: BlockLocation {
        start: 89,
        end: 102,
        tag_start: 75,
        tag_end: 111,
        start_line: 5,
        start_column: 15,
        end_line: 7,
        end_column: 1,
    },
    lang: None,
    src: None,
    setup: true,
    attrs: {
        "setup": "",
    },
    bindings: None,
}
